--- a/alhe_doc.tex
+++ b/alhe_doc.tex
@@ -58,15 +58,17 @@ W ramach projektu planujemy porównać działanie trzech algorytmów:
 
 \begin{itemize}
 
-  \item \textbf{Prosty algorytm genetyczny} -- wersja algorytmu, w której odrzuca się rozwiązania nie spełniające dane ograniczenia problemu.
+  \item \textbf{Prosty algorytm genetyczny} -- algorytm genetyczny, w którym odrzuca się rozwiązania niespełniające ograniczenia problemu.
 
-  \item \textbf{Algorytm genetyczny zmodyfikowany} -- wersja algorytmu bazowana na artykule. 
-Polega ona na poradzeniu sobie z rozwiązaniami niespełniającymi ograniczenia.
+  \item \textbf{Algorytm genetyczny zmodyfikowany} -- algorytm genetyczny bazowany na artykule. 
+Polega on na poradzeniu sobie z rozwiązaniami niespełniającymi ograniczenia.
 Do tego zaimplementujemy dwie metody, które najlepiej się sprawdziły wg. wspomnianego artykułu: \emph{zastosowanie w funcji celu logarytmicznej funkcji kary} oraz \emph{zachłanne naprawianie rozwiązań} (do wyboru odpowiednio do pojemności plecaka).
 
   \item \textbf{Branch-and-Bound} -- algorytm, który powinien zapewnić nam rozwiązanie optymalne. Znając rozwiązanie optymalne będziemy w staniedokładniej oszacować efektywność algorytmów genetycznych.
   
 \end{itemize}
+
+Oczekujemy, że zmodyfikowana wersja algorytmu genetycznego okaże się efektywniejsza niż wersja prosta.
 
 %\subsection{Dane wejściowe}
 
